# todosync_django

./: .gitignore  README.md  pyproject.toml
docs/: task-queue.md
src/todosync/: admin.py  apps.py  blocks.py  forms.py  huey_tasks.py  models.py  registry.py  schemas.py  task_queue.py  todoist_api.py  urls.py  utils.py  views.py
src/todosync/management/commands/: create_todoist_webhook.py  delete_django_tasks.py  delete_todoist_tasks.py  delete_todoist_test_tasks.py  delete_todoist_webhook.py  list_todoist_projects.py  list_todoist_sections.py  list_todoist_webhooks.py  sync_completed_tasks.py  sync_todoist_sections.py
src/todosync/migrations/: 0001_initial.py  0002_basetaskgrouptemplate_created_at.py  0002_remove_task_start_date_alter_task_due_date.py  0002_remove_tasksyncsettings_description_and_more.py  0002_rename_section_task_todoist_section_id.py  0002_task_due_date_task_start_date.py  0003_alter_basetaskgrouptemplate_task_type.py  0003_remove_basetaskgrouptemplate_task_type.py  0003_remove_basetaskgrouptemplate_tasks_templatetask.py  0003_remove_templatetask_labels_and_more.py  0004_alter_templatetask_due_date.py  0004_baseparenttask_completed_baseparenttask_section.py  0004_task_description.py  0005_remove_templatetask_parent_task_depends_on_and_more.py  0005_task_hide.py  0006_remove_tasksyncsettings_default_project_id.py  0007_todoistsection_taskrule.py  0008_remove_taskrule_labelactionrule.py  0009_todoistuser_task_completed_at_task_completed_by.py  0010_add_user_created_to_task.py
src/todosync/templates/todosync/: base_task_group_template.html  create_task_group.html
src/todosync/tests/: test_models.py  test_todoist_api.py  test_webhook.py
src/todosync/tests/fixtures/: item_added.json  item_completed.json  item_deleted.json  item_uncompleted.json  item_updated_section.json
todosync/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
todosync/management/commands/: list_todoist_projects.py
todosync/migrations/: 0001_initial.py
todosync/templates/todosync/: base.html  create_task_group.html
