[project]
name = "todosync-django"
version = "0.2.0"
description = "Reusable Django package for Todoist task management integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "todoist-api-python>=3.1.0",
    "django-polymorphic>=4.0",
    "django-click>=2.4.0",
    "rich>=14.0.0",
    "pydantic>=2.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todosync"]

[dependency-groups]
dev = [
    "complexipy>=5.2.0",
]
