[project]
name = "todosync-django"
version = "0.2.0"
description = "Reusable Django package for Todoist task management integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=6.0",
    "todoist-api-python>=3.1.0",
    "django-polymorphic>=4.0",
    "django-click>=2.4.0",
    "rich>=14.0.0",
    "pydantic>=2.0",
    "requests>=2.28.0",
    "dotenv>=0.9.9",
    "django-huey>=1.0",
    "huey>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todosync"]

[dependency-groups]
dev = [
    "complexipy>=5.2.0",
    "ruff>=0.15.2",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
pre_commit = {cmd = "pre-commit install", help = "Install pre-commit hooks"}
lint = {cmd = "ruff check .", help = "Run ruff linter"}
lint_fix = {cmd = "ruff check . --fix", help = "Run ruff linter with auto-fix"}
format = {cmd = "ruff format .", help = "Format code with ruff"}
format_check = {cmd = "ruff format . --check", help = "Check code formatting"}
test = {cmd = "pytest -c pytest.ini -v", help = "Run all tests"}
test_webhook = {cmd = "pytest -c pytest.ini -v tests/test_webhook.py", help = "Run webhook tests only"}
bump_patch = {cmd = "python -c \"import re, pathlib; p=pathlib.Path('pyproject.toml'); t=p.read_text(); t=re.sub(r'version = \\\"(\\d+)\\.(\\d+)\\.(\\d+)\\\"', lambda m: f'version = \\\"{m[1]}.{m[2]}.{int(m[3])+1}\\\"', t); p.write_text(t); print(re.search(r'version = \\\"(.+?)\\\"', t)[1])\"", help = "Bump patch version (0.1.0 -> 0.1.1)"}
bump_minor = {cmd = "python -c \"import re, pathlib; p=pathlib.Path('pyproject.toml'); t=p.read_text(); t=re.sub(r'version = \\\"(\\d+)\\.(\\d+)\\.(\\d+)\\\"', lambda m: f'version = \\\"{m[1]}.{int(m[2])+1}.0\\\"', t); p.write_text(t); print(re.search(r'version = \\\"(.+?)\\\"', t)[1])\"", help = "Bump minor version (0.1.0 -> 0.2.0)"}
bump_major = {cmd = "python -c \"import re, pathlib; p=pathlib.Path('pyproject.toml'); t=p.read_text(); t=re.sub(r'version = \\\"(\\d+)\\.(\\d+)\\.(\\d+)\\\"', lambda m: f'version = \\\"{int(m[1])+1}.0.0\\\"', t); p.write_text(t); print(re.search(r'version = \\\"(.+?)\\\"', t)[1])\"", help = "Bump major version (0.1.0 -> 1.0.0)"}
